--- a/app/src/main/res/layout/esptouch_demo_activity.xml
+++ b/app/src/main/res/layout/esptouch_demo_activity.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tvApSsid"
@@ -23,14 +23,13 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:singleLine="true"
-            android:textSize="24sp">
-        </TextView>
+            android:textSize="24sp"></TextView>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tvApPassword"
@@ -48,44 +47,43 @@
             android:inputType="text"
             android:singleLine="true"
             android:text=""
-            tools:ignore="TextFields" >
+            tools:ignore="TextFields">
 
         </EditText>
     </LinearLayout>
-    
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp" 
+        android:layout_height="50dp"
         android:gravity="center_vertical"
-        android:orientation="horizontal" >
-        
+        android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/spinnerTaskResultCountTitle"
             android:textSize="24sp" />
-        
+
         <Space
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1" />
-        
+
         <Spinner
             android:id="@+id/spinnerTaskResultCount"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
+            android:layout_height="wrap_content" />
     </LinearLayout>
-    
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="0dp" 
-            android:layout_weight="1"/>
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
         <Button
             android:id="@+id/btnConfirm"
@@ -97,8 +95,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/app_version" 
-            android:textSize="16sp"/>
+            android:text="@string/app_version"
+            android:textSize="16sp" />
 
     </LinearLayout>
 
